--- a/colegioTest/src/app/home/home.component.scss
+++ b/colegioTest/src/app/home/home.component.scss
@@ -10,40 +10,56 @@
 }
 
 
-/* tabla.component.css */
+/* Estilos básicos para el formulario y la tabla */
 .table-container {
-    margin: 20px;
-  }
-  
-  .data-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .data-table th, .data-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .data-table th {
-    background-color: #f4f4f4;
-    color: #333;
-  }
-  
-  .data-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  .data-table button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  .data-table button:hover {
-    background-color: #0056b3;
-  }
-  
+  margin: 20px;
+}
+
+.data-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.data-table th, .data-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.data-table th {
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.data-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+form label {
+  display: block;
+  margin: 2px 2em;
+}
+
+form input {
+  display: block;
+  padding: 8px;
+  width: 50%;
+  margin:0px 2em
+}
+
+form button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin:2em 2em;
+}
+
+form button:hover {
+  background-color: #0056b3;
+}
